# pulumi-example-py-any-tf

./: .editorconfig  .pre-commit-config.yaml  Pulumi.yaml  README.md  __main__.py  pyproject.toml
.github/workflows/: dev_pull_request.yaml  dev_push.yaml  gitguardian.yaml  main_pull_request.yaml  main_push.yaml  sbx_pull_request.yaml  sbx_push.yaml
sdks/opensearch/: pyproject.toml
sdks/opensearch/pulumi_opensearch/: README.md  __init__.py  _inputs.py  _utilities.py  anomaly_detection.py  audit_config.py  channel_configuration.py  cluster_settings.py  component_template.py  composable_index_template.py  dashboard_object.py  dashboard_tenant.py  data_stream.py  get_host.py  index.py  index_template.py  ingest_pipeline.py  ism_policy.py  ism_policy_mapping.py  monitor.py  outputs.py  provider.py  pulumi-plugin.json  role.py  roles_mapping.py  script.py  sm_policy.py  snapshot_repository.py  user.py
sdks/opensearch/pulumi_opensearch/config/: __init__.pyi  vars.py
sdks/random/: pyproject.toml
sdks/random/pulumi_random/: README.md  __init__.py  _utilities.py  bytes.py  id.py  integer.py  password.py  pet.py  provider.py  pulumi-plugin.json  shuffle.py  string.py  uuid.py
