[project]
  name = "pulumi_random"
  description = "A Pulumi provider dynamically bridged from random."
  dependencies = ["parver>=0.2.1", "pulumi>=3.165.0,<4.0.0", "semver>=2.8.1", "typing-extensions>=4.11,<5; python_version < \"3.11\""]
  readme = "README.md"
  requires-python = ">=3.9"
  version = "3.7.2"
  [project.urls]
    Repository = "https://github.com/hashicorp/terraform-provider-random"

[build-system]
  requires = ["setuptools>=61.0"]
  build-backend = "setuptools.build_meta"

[tool]
  [tool.setuptools]
    [tool.setuptools.package-data]
      pulumi_random = ["py.typed", "pulumi-plugin.json"]
